force-app/main/default/objects/Publisher__c/Publisher__c.object-meta.xml
<CustomObject>
    <label>Publisher</label>
    <nameField>
        <label>Publisher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publishers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>