force-app/main/default/objects/Publisher__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Publusher&apos;s address</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>