force-app/main/default/objects/Publisher__c/fields/Hidden_Unique_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Unique_Name_Field__c</fullName>
    <description>A field that holds the name of the Publisher which is unique, and will stop the creation process if record with this name already exists</description>
    <label>Hidden Unique Name Field</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>